[package]
name = "rusticemon"
version = "0.1.0"
edition = "2021"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1", features = ["full"] }
anyhow = "1.0"


num = "0.4.0"
num-traits = "0.2.12"
num-derive = "0.3.3"

strum = "0.20.0"
strum_macros = "0.20.1"


byteorder = "1.4.3"

pretty-hex = "0.2.1"
hex = "0.4.2"
